--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "postcss": "8.4.35",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.3"
+    "tailwindcss": "3.4.3",
+    "@vercel/blob": "^0.24.0"
   },
   "devDependencies": {
     "@types/node": "^20",
